Application/Project/TrueSTUDIO/.metadata/.plugins/org.eclipse.cdt.ui/STM32H745-Discovery.build.log
18:06:21 **** Incremental Build of configuration BUILD for project STM32H745-Discovery ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c ..\..\..\..\Source\main.c -mthumb -mcpu=cortex-m7 -mfloat-abi=hard -mfpu=fpv5-sp-d16 -std=c11 -DEW_FRAME_BUFFER_COLOR_FORMAT=EW_FRAME_BUFFER_COLOR_FORMAT_RGB565 -DEW_SURFACE_ROTATION=0 -DEW_USE_FREE_RTOS=1 -DEW_USE_EXTERNAL_FLASH=1 -DEW_BITMAP_PIXEL_SECTION_NAME=.SectionEwResource -DEW_FONT_PIXEL_SECTION_NAME=.SectionEwResource -DCORE_CM7 -DUSE_HAL_DRIVER -DSTM32H745xx -DUSE_STM32H745I_DISCO -IC:/Users/maanm/Documents/Embedded Wizard Projects/bfft_driver_interface_HW_library/Application/Project/TrueSTUDIO/STM32H745-Discovery/../../../../Application/GeneratedCode -IC:/Users/maanm/Documents/Embedded Wizard Projects/bfft_driver_interface_HW_library/Application/Project/TrueSTUDIO/STM32H745-Discovery/../../../../Application/Source -IC:/Users/maanm/Documents/Embedded Wizard Projects/bfft_driver_interface_HW_library/Application/Project/TrueSTUDIO/STM32H745-Discovery/../../../../TargetSpecific -IC:/Users/maanm/Documents/Embedded Wizard Projects/bfft_driver_interface_HW_library/Application/Project/TrueSTUDIO/STM32H745-Discovery/../../../../TargetSpecific/Drivers -IC:/Users/maanm/Documents/Embedded Wizard Projects/bfft_driver_interface_HW_library/Application/Project/TrueSTUDIO/STM32H745-Discovery/../../../../ThirdParty/STM32Cube_FW_H7/Drivers/STM32H7xx_HAL_Driver/Inc -IC:/Users/maanm/Documents/Embedded Wizard Projects/bfft_driver_interface_HW_library/Application/Project/TrueSTUDIO/STM32H745-Discovery/../../../../ThirdParty/STM32Cube_FW_H7/Drivers/BSP/STM32H745I-DISCO -IC:/Users/maanm/Documents/Embedded Wizard Projects/bfft_driver_interface_HW_library/Application/Project/TrueSTUDIO/STM32H745-Discovery/../../../../ThirdParty/STM32Cube_FW_H7/Drivers/BSP/Components/Common -IC:/Users/maanm/Documents/Embedded Wizard Projects/bfft_driver_interface_HW_library/Application/Project/TrueSTUDIO/STM32H745-Discovery/../../../../ThirdParty/STM32Cube_FW_H7/Drivers/BSP/Components/mt25tl01g -IC:/Users/maanm/Documents/Embedded Wizard Projects/bfft_driver_interface_HW_library/Application/Project/TrueSTUDIO/STM32H745-Discovery/../../../../ThirdParty/STM32Cube_FW_H7/Drivers/BSP/Components/mt48lc4m32b2 -IC:/Users/maanm/Documents/Embedded Wizard Projects/bfft_driver_interface_HW_library/Application/Project/TrueSTUDIO/STM32H745-Discovery/../../../../ThirdParty/STM32Cube_FW_H7/Drivers/CMSIS/Include -IC:/Users/maanm/Documents/Embedded Wizard Projects/bfft_driver_interface_HW_library/Application/Project/TrueSTUDIO/STM32H745-Discovery/../../../../ThirdParty/STM32Cube_FW_H7/Drivers/CMSIS/Device/ST/STM32H7xx/Include -IC:/Users/maanm/Documents/Embedded Wizard Projects/bfft_driver_interface_HW_library/Application/Project/TrueSTUDIO/STM32H745-Discovery/../../../../ThirdParty/STM32Cube_FW_H7/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM7/r0p1 -IC:/Users/maanm/Documents/Embedded Wizard Projects/bfft_driver_interface_HW_library/Application/Project/TrueSTUDIO/STM32H745-Discovery/../../../../ThirdParty/STM32Cube_FW_H7/Middlewares/Third_Party/FreeRTOS/Source/include -IC:/Users/maanm/Documents/Embedded Wizard Projects/bfft_driver_interface_HW_library/Application/Project/TrueSTUDIO/STM32H745-Discovery/../../../../ThirdParty/STM32Cube_FW_H7/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS -IC:/Users/maanm/Documents/Embedded Wizard Projects/bfft_driver_interface_HW_library/Application/Project/TrueSTUDIO/STM32H745-Discovery/../../../../PlatformPackage/RTE -IC:/Users/maanm/Documents/Embedded Wizard Projects/bfft_driver_interface_HW_library/Application/Project/TrueSTUDIO/STM32H745-Discovery/../../../../PlatformPackage/RGB565 -O2 -ffunction-sections -g3 -fstack-usage -Wall -fmessage-length=0 -o Application\Source\main.o 
In file included from ..\..\..\..\Source\./BFFT./CAN./../externals.h:13:0,
                 from ..\..\..\..\Source\./BFFT./CAN./CANID.h:13,
                 from ..\..\..\..\Source\main.h:37,
                 from ..\..\..\..\Source\main.c:44:
c:\users\maanm\documents\embedded wizard projects\bfft_driver_interface_hw_library\application\source\bfft\can\cansubscriber.h:33:4: error: unknown type name 'sCANID_t'
    sCANID_t sCANID;
    ^~~~~~~~
c:\users\maanm\documents\embedded wizard projects\bfft_driver_interface_hw_library\application\source\bfft\can\cansubscriber.h:43:13: error: unknown type name 'eCANID_t'
       const eCANID_t ceCANID_type);
             ^~~~~~~~

18:06:21 Build Finished (took 759ms)

